# task-generator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  scheduler.py  schemas.py  services.py
app/api/: endpoints.py
app/utils/: logger.py
